--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
+    <img src = "github.io/img.png"></img>
     <h1 class = "title">HTML & CSS　の開発環境を用意しよう！</h1>
     <p>自分のPCでWebページを開発する方法を学習しましょうポヨポヨ</p>
   </body>
