--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <img src = "mdg-sys/github.io/top.png"></img>
     <h1 class = "title">HTML & CSS　の開発環境を用意しよう！</h1>
-    <p>自分のPCでWebページを開発する方法を学習しましょうポヨポヨ</p>
+    <p>自分のPCでWebページを開発する方法を学習しましょう</p>
   </body>
 </html>
