--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Progate</title>
+    <title>MathMagics</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <img src = "mdg-sys/github.io/top.png"></img>
+    <img src = "top.png"></img>
     <h1 class = "title">HTML & CSS　の開発環境を用意しよう！</h1>
     <p>自分のPCでWebページを開発する方法を学習しましょう</p>
   </body>
