--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <img src = "top.png"></img>
+    <img src = "top.png">
     <h1 class = "title">HTML & CSS　の開発環境を用意しよう！</h1>
     <p>自分のPCでWebページを開発する方法を学習しましょう</p>
+    <p>その後に自分のランディングページを作成してみましょう</p>
   </body>
 </html>
