wi '#' will be ignored, and an empty message aborts the commit.

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                     <!-- 1列目 -->
                     <div class = "works-card-wrapper">
                         <div class = "work-card">
-                            <img src="/image/mathematics-2.jpg" alt="">
+                            <img src="image/mathematics-2.jpg" alt="">
                             <h3>Mathmatics</h3>
                         </div>
                         <div class = "work-card">
-                            <img src="/image/physics-3.jpg" alt="">
+                            <img src="image/physics-3.jpg" alt="">
                             <h3>Physics</h3>
                         </div>
                         <div class = "work-card">
@@ -92,15 +92,15 @@
                     <!-- 2列目 -->
                     <div class = "works-card-wrapper">
                         <div class = "work-card">
-                            <img src="/image/simulation-1.jpg" alt="">
+                            <img src="image/simulation-1.jpg" alt="">
                             <h3>Silumation programming</h3>
                         </div>
                         <div class = "work-card">
-                            <img src="/image/design-1.jpg" alt="">
+                            <img src="image/design-1.jpg" alt="">
                             <h3>Design</h3>
                         </div>
                         <div class = "work-card">
-                            <img src="/image/lifeHack-1.jpg" alt="">
+                            <img src="image/lifeHack-1.jpg" alt="">
                             <h3>Life hack</h3>
                         </div>
                     </div>
