--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <h3>Physics</h3>
                         </div>
                         <div class = "work-card">
-                            <img src="/image/chem-1.jpg" alt="">
+                            <img src="image/chem-1.jpg" alt="">
                             <h3>Chemistry</h3>
                         </div>
                     </div>
