--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class = "works-card-wrapper">
                         <div class = "work-card">
                             <img src="image/mathematics-2.jpg" alt="">
-                            <h3>Mathmatics</h3>
+                            <h3>Mathematics</h3>
                         </div>
                         <div class = "work-card">
                             <img src="image/physics-3.jpg" alt="">
