--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class = "works-card-wrapper">
                         <div class = "work-card">
                             <img src="image/simulation-1.jpg" alt="">
-                            <h3>Silumation programming</h3>
+                            <h3>Simulation programming</h3>
                         </div>
                         <div class = "work-card">
                             <img src="image/design-1.jpg" alt="">
