--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <h2>ABOUT</h2>
             <div class = "line"></div>
             <p>
-                自然科学だいしゅき組(仮)は岡山県を拠点とした<br>
-                <span>理系オタク</span>の溜まり場です。<br>
-                このページを見てしまったあなたは<br>
+                自然科学だいしゅき組(仮)は岡山県を拠点とした<br class = "sp_br">
+                <span>理系オタク</span>の溜まり場です。<br class = "sp_br">
+                このページを見てしまったあなたは<br class = "sp_br">
                 二度と普通の生活には…戻れます。
             </p>
         </div>
@@ -59,8 +59,8 @@
             <h2>NEWS</h2>
             <div class = "line"></div>
             <ul>
-                <li>2020.10.1 開設者の会社脱出</li>
-                <li>2020.12.22 このサイトの作成日</li>
+                <li>2020.10.1 <br class = "sp_br">開設者の会社脱出</li>
+                <li>2020.12.22 <br class = "sp_br">このサイトの作成日</li>
             </ul>
         </div>
     </section>
