--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class = "wrap">
     <!---------------------------------------------------
         ヘッダー
     --------------------------------------------------->
@@ -115,5 +116,6 @@
     <footer>
         <p><small>自然科学だいしゅき組(仮)</small></p>
     </footer>
+    </div>
 </body>
 </html>
