--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     --------------------------------------------------->
     <header>
         <div class = "inner">
-            <h3>自然科学だいしゅき組(仮)</h3>
+            <h3>だいしゅきホールディングス</h3>
             <nav>
                 <ul>
                     <li>ABOUT</li>
@@ -114,7 +114,7 @@
     --------------------------------------------------->
 
     <footer>
-        <p><small>自然科学だいしゅき組(仮)</small></p>
+        <p><small>だいしゅきホールディングス</small></p>
     </footer>
     </div>
 </body>
