--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     --------------------------------------------------->
     <header>
         <div class = "inner">
-            <h3>だいしゅきホールディングス</h3>
+            <h3>㈱こさポンプ</h3>
             <nav>
                 <ul>
-                    <li>ABOUT</li>
-                    <li>NEWS</li>
-                    <li>WORKS</li>
-                    <li>ACCESS</li>   
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#news">NEWS</a></li>
+                    <li><a href="#works">WORKS</a></li>
+                    <li>ACCESS</li>
                     <li>CONTACT</li>
                 </ul>
             </nav>
@@ -31,22 +31,23 @@
     --------------------------------------------------->
 
     <section class = "mainvisual">
-        <h2>自然科学とはなにか<br>〜未来を操る人類最強の武器〜</h2> <!-- br : break-->
+        <h2>こさポンプとは何か<br>〜未来を切り拓く人類最強の武器〜</h2> <!-- br : break-->
     </section>
 
     <!---------------------------------------------------
         ABOUT
     --------------------------------------------------->
 
+    <a name = "about"></a>
     <section class = "about">
         <div class = "inner">
             <h2>ABOUT</h2>
             <div class = "line"></div>
             <p>
-                自然科学だいしゅき組(仮)は岡山県を拠点とした<br class = "sp_br">
+                ㈱こさポンプは岡山県を拠点とした<br class = "sp_br">
                 <span>理系オタク</span>の溜まり場です。<br class = "sp_br">
-                このページを見てしまったあなたは<br class = "sp_br">
-                二度と普通の生活には…戻れます。
+                助教授にポンプを奪われた研究生たちは<br class = "sp_br">
+                こさポンプで反撃の狼煙を上げる。
             </p>
         </div>
     </section>
@@ -55,6 +56,7 @@
         NEWS
     --------------------------------------------------->
 
+    <a name = "news"></a>
     <section class = "news">
         <div class = "inner">
             <h2>NEWS</h2>
@@ -62,6 +64,7 @@
             <ul>
                 <li>2020.10.1 <br class = "sp_br">開設者の会社脱出</li>
                 <li>2020.12.22 <br class = "sp_br">このサイトの作成日</li>
+                <li>2020.12.26 <br class = "sp_br">ネームクリエイターを用いて一番最初に出てきた名前に改名</li>
             </ul>
         </div>
     </section>
@@ -70,6 +73,7 @@
         WORKS
     --------------------------------------------------->
 
+    <a name = "works"></a>
     <section class = "works">
         <div class = "inner">
             <h2>WORKS</h2>
@@ -114,7 +118,7 @@
     --------------------------------------------------->
 
     <footer>
-        <p><small>だいしゅきホールディングス</small></p>
+        <p><small>©こさポンプ</small></p>
     </footer>
     </div>
 </body>
