--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     --------------------------------------------------->
 
     <section class = "mainvisual">
-        <h2>こさポンプとは何か<br>〜未来を切り拓く人類最強の武器〜</h2> <!-- br : break-->
+        <h2>『こさポンプ』とは何か<br>〜未来を切り拓く人類最強の武器〜</h2> <!-- br : break-->
     </section>
 
     <!---------------------------------------------------
