--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>とりあえずなにか作ってみた</title>
-    <link rel="stylesheet" href="style.css">
+    <title>フリーランス研究者のWebサイト</title>
+    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="Css/header.css">
+    <link rel="stylesheet" href="Css/mainvisual.css">
+    <link rel="stylesheet" href="Css/about.css">
+    <link rel="stylesheet" href="Css/news.css">
+    <link rel="stylesheet" href="Css/works.css">
+    <link rel="stylesheet" href="Css/footer.css">
+    <link rel="stylesheet" href="Css/response.css">
+
+    <!-- jquery -->
+    <script src = "./jquery-3.5.1.min.js"></script>
+
+    <script>
+        // 要素フェードイン
+        $(function(){　//$(function()｛｝はDOMの読み込みが終わったら中の処理をするという意味
+            $(window).scroll(function (){
+                $('.fadein').each(function(){
+                    var targetElement = $(this).offset().top;
+                    var scroll = $(window).scrollTop();
+                    var windowHeight = $(window).height();
+                    if (scroll + windowHeight > targetElement + 170){
+                        $(this).css('opacity','1');
+                        $(this).css('transform','translateY(0)');
+                    }
+                });
+            });
+        });
+    </script>
+
 </head>
 <body>
     <div class = "wrap">
@@ -13,7 +41,7 @@
     --------------------------------------------------->
     <header>
         <div class = "inner">
-            <h3>㈱こさポンプ</h3>
+            <h3>For My Life</h3>
             <nav>
                 <ul>
                     <li><a href="#about">ABOUT</a></li>
@@ -31,7 +59,16 @@
     --------------------------------------------------->
 
     <section class = "mainvisual">
-        <h2>『こさポンプ』とは何か<br>〜未来を切り拓く人類最強の武器〜</h2> <!-- br : break-->
+        <div class="inner">
+                <h2>科学とは何か<br><span>〜未来を切り拓く人類最強の武器〜</span></h2>
+        </div>
+
+        <script>
+            $(function(){　//$(function()｛｝はDOMの読み込みが終わったら中の処理をするという意味
+                $("h2").css('opacity','1');
+                $("h2").css('transform','translateY(0)');
+            });
+        </script>
     </section>
 
     <!---------------------------------------------------
@@ -44,10 +81,8 @@
             <h2>ABOUT</h2>
             <div class = "line"></div>
             <p>
-                ㈱こさポンプは岡山県を拠点とした<br class = "sp_br">
-                <span>理系オタク</span>の溜まり場です。<br class = "sp_br">
-                助教授にポンプを奪われた研究生たちは<br class = "sp_br">
-                こさポンプで反撃の狼煙を上げる。
+                
+                
             </p>
         </div>
     </section>
@@ -62,9 +97,31 @@
             <h2>NEWS</h2>
             <div class = "line"></div>
             <ul>
-                <li>2020.10.1 <br class = "sp_br">開設者の会社脱出</li>
-                <li>2020.12.22 <br class = "sp_br">このサイトの作成日</li>
-                <li>2020.12.26 <br class = "sp_br">ネームクリエイターを用いて一番最初に出てきた名前に改名</li>
+                <li>
+                    <div class="date">
+                        <p>2020.12.22</p>
+                    </div>
+                    <div class="content">
+                        <p>当サイトの作成日</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="date">
+                        <p>2021.2.5</p>
+                    </div>
+                    <div class="content">
+                        <p>当サイトの全面改装</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="date">
+                        <p></p>
+                    </div>
+                    <div class="content">
+                        <p></p>
+                    </div>
+                </li>
+
             </ul>
         </div>
     </section>
@@ -81,30 +138,30 @@
                 <div class = "works-box">
                     <!-- 1列目 -->
                     <div class = "works-card-wrapper">
-                        <div class = "work-card">
+                        <div class = "work-card fadein">
                             <img src="image/mathematics-2.jpg" alt="">
                             <h3>Mathematics</h3>
                         </div>
-                        <div class = "work-card">
+                        <div class = "work-card fadein">
                             <img src="image/physics-3.jpg" alt="">
                             <h3>Physics</h3>
                         </div>
-                        <div class = "work-card">
+                        <div class = "work-card fadein">
                             <img src="image/chem-1.jpg" alt="">
                             <h3>Chemistry</h3>
                         </div>
                     </div>
                     <!-- 2列目 -->
                     <div class = "works-card-wrapper">
-                        <div class = "work-card">
+                        <div class = "work-card fadein">
                             <img src="image/simulation-1.jpg" alt="">
                             <h3>Simulation programming</h3>
                         </div>
-                        <div class = "work-card">
+                        <div class = "work-card fadein">
                             <img src="image/design-1.jpg" alt="">
                             <h3>Design</h3>
                         </div>
-                        <div class = "work-card">
+                        <div class = "work-card fadein">
                             <img src="image/lifeHack-1.jpg" alt="">
                             <h3>Life hack</h3>
                         </div>
@@ -118,7 +175,7 @@
     --------------------------------------------------->
 
     <footer>
-        <p><small>©こさポンプ</small></p>
+        <p><small>©2021 For My Life</small></p>
     </footer>
     </div>
 </body>
