--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="Css/footer.css">
     <link rel="stylesheet" href="Css/response.css">
 
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+
     <!-- jquery -->
     <script src = "./jquery-3.5.1.min.js"></script>
 
@@ -42,15 +45,35 @@
     <header>
         <div class = "inner">
             <h3>For My Life</h3>
+
+            <div class="fa fa-bars" id="menu"></div>
+            <div class="fa fa-times" id="close"></div>
+
             <nav>
                 <ul>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="#news">NEWS</a></li>
                     <li><a href="#works">WORKS</a></li>
-                    <li>ACCESS</li>
-                    <li>CONTACT</li>
+                    <li><a href="#">ACCESS</a></li>
+                    <li><a href="#">CONTACT</a></li>
                 </ul>
             </nav>
+
+            <script>
+                $("#menu").click(function() {
+                    $("#mask").css("display", "block");
+                    $("#side-menu").css("display", "block");
+                    $("#menu").css("display", "none");
+                    $("#close").css("display", "block");
+                });
+
+                $("#close").click(function() {
+                    $("#mask").css("display", "none");
+                    $("#menu").css("display", "block");
+                    $("#close").css("display", "none");
+                })
+            </script>
+
         </div>
     </header>
 
@@ -69,6 +92,19 @@
                 $("h2").css('transform','translateY(0)');
             });
         </script>
+
+        <div id="mask"></div>
+
+        <div id="side-menu">
+            <ul>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#news">NEWS</a></li>
+                <li><a href="#works">WORKS</a></li>
+                <li><a href="#">ACCESS</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </div>
+
     </section>
 
     <!---------------------------------------------------
@@ -139,30 +175,42 @@
                     <!-- 1列目 -->
                     <div class = "works-card-wrapper">
                         <div class = "work-card fadein">
-                            <img src="image/mathematics-2.jpg" alt="">
+                            <a href="#">
+                                <img src="image/mathematics-2.jpg" alt="">
+                            </a>
                             <h3>Mathematics</h3>
                         </div>
                         <div class = "work-card fadein">
-                            <img src="image/physics-3.jpg" alt="">
+                            <a href="#">
+                                <img src="image/physics-3.jpg" alt="">
+                            </a>
                             <h3>Physics</h3>
                         </div>
                         <div class = "work-card fadein">
-                            <img src="image/chem-1.jpg" alt="">
+                            <a href="chem.html">
+                                <img src="image/chem-1.jpg" alt="">
+                            </a>
                             <h3>Chemistry</h3>
                         </div>
                     </div>
                     <!-- 2列目 -->
                     <div class = "works-card-wrapper">
                         <div class = "work-card fadein">
-                            <img src="image/simulation-1.jpg" alt="">
+                            <a href="#">
+                                <img src="image/simulation-1.jpg" alt="">
+                            </a>
                             <h3>Simulation programming</h3>
                         </div>
                         <div class = "work-card fadein">
-                            <img src="image/design-1.jpg" alt="">
+                            <a href="#">
+                                <img src="image/design-1.jpg" alt="">
+                            </a>
                             <h3>Design</h3>
                         </div>
                         <div class = "work-card fadein">
-                            <img src="image/lifeHack-1.jpg" alt="">
+                            <a href="#">
+                                <img src="image/lifeHack-1.jpg" alt="">
+                            </a>
                             <h3>Life hack</h3>
                         </div>
                     </div>
@@ -178,5 +226,7 @@
         <p><small>©2021 For My Life</small></p>
     </footer>
     </div>
+
+    <script src="Js/main.js"></script>
 </body>
 </html>
