--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 
                 答えを求めて、自分で道を拓くことを忘れてはないか…<br>
 
-                ここは、自然界の不思議に熱き思いを持つものが集まる場所。<br>
+                ここは、自然界の不思議に熱き思いを持つ者が集まる場所。<br>
 
                 そして、オンライン上にひっそりと佇む<span>研究所</span>。<br>
 
