--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="物理化学の試験対策に向けた内容や、卒業研究などに役立つ情報を掲載しております。主に大学生の方が対象ではございますが、わかりやすく要点をおさえた内容となっておりますので高校生の方でもぜひご覧ください。">
     <meta name="keywords" content="物理化学,大学,わかりやすく"><!-- 経過観察が必要 -->
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="wrap">
