--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- サイトロゴ -->
             <div class="site-logo">
                 <h1>
-                    <a href=""><img src="/image/site-logo.png" alt="物理化学の入り口サイトロゴです。" style="width: 40vw;"></a>
+                    <a href=""><img src="image/site-logo.png" alt="物理化学の入り口サイトロゴです。" style="width: 40vw;"></a>
                 </h1>
             </div><!-- site-logp -->
             
@@ -65,7 +65,7 @@
         --------------------------------------------->
             <main>
                 <!-- メインビジュアル -->
-                <img src="/image/site-image.jpeg" alt="試験や研究の助けになる物理化学の知識" class="main-visual">
+                <img src="image/site-image.jpeg" alt="試験や研究の助けになる物理化学の知識" class="main-visual">
     
                 <!-- コンテンツ -->
                 <section class="contents-section">
@@ -73,7 +73,7 @@
                     <dl class="contents-container">
                         <article>
                             <div class="content-box">
-                                <img src="/image/therm.png" alt="熱力学の項目です">
+                                <img src="image/therm.png" alt="熱力学の項目です">
                                 <div class="title-box">
                                     <dt><h3>熱力学</h3></dt>
                                     <dd>作成中です。<br>しばらくお待ち下さい。</dd>
@@ -82,7 +82,7 @@
                         </article>
                         <article>
                             <div class="content-box">
-                                <img src="/image/kinetic.png" alt="反応速度論の項目です">
+                                <img src="image/kinetic.png" alt="反応速度論の項目です">
                                 <div class="title-box">
                                     <dt><h3>反応速度論</h3></dt>
                                     <dd>作成中です。<br>しばらくお待ち下さい。</dd>
@@ -91,7 +91,7 @@
                         </article>
                         <article>
                             <div class="content-box">
-                                <img src="/image/quantum.png" alt="量子論の項目です">
+                                <img src="image/quantum.png" alt="量子論の項目です">
                                 <div class="title-box">
                                     <dt><h3>量子論</h3></dt>
                                     <dd>作成中です。<br>しばらくお待ち下さい。</dd>
@@ -100,7 +100,7 @@
                         </article>
                         <article>
                             <div class="content-box">
-                                <img src="/image/analysis.png" alt="分光分析学の項目です">
+                                <img src="image/analysis.png" alt="分光分析学の項目です">
                                 <div class="title-box">
                                     <dt><h3>分光分析学</h3></dt>
                                     <dd>作成中です。<br>しばらくお待ち下さい。</dd>
@@ -109,7 +109,7 @@
                         </article>
                         <article>
                             <div class="content-box">
-                                <img src="/image/organo.png" alt="量子有機化学の項目です">
+                                <img src="image/organo.png" alt="量子有機化学の項目です">
                                 <div class="title-box">
                                     <dt><h3>量子有機化学</h3></dt>
                                     <dd>作成中です。<br>しばらくお待ち下さい。</dd>
@@ -118,7 +118,7 @@
                         </article>
                         <article>
                             <div class="content-box">
-                                <img src="/image/macromol.png" alt="高分子科学の項目です">
+                                <img src="image/macromol.png" alt="高分子科学の項目です">
                                 <div class="title-box">
                                     <dt><h3>高分子科学</h3></dt>
                                     <dd>作成中です。<br>しばらくお待ち下さい。</dd>
@@ -127,7 +127,7 @@
                         </article>
                         <article>
                             <div class="content-box">
-                                <img src="/image/statistic.png" alt="基礎の数学の項目です">
+                                <img src="image/statistic.png" alt="基礎の数学の項目です">
                                 <div class="title-box">
                                     <dt><h3>基礎数学</h3></dt>
                                     <dd>作成中です。<br>しばらくお待ち下さい。</dd>
@@ -136,7 +136,7 @@
                         </article>
                         <article>
                             <div class="content-box">
-                                <img src="/image/program.png" alt="コンピュータに関する項目です">
+                                <img src="image/program.png" alt="コンピュータに関する項目です">
                                 <div class="title-box">
                                     <dt><h3>シミュレーション</h3></dt>
                                     <dd>作成中です。<br>しばらくお待ち下さい。</dd>
