--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     
                 <!-- コンテンツ -->
                 <section class="contents-section">
-                    <h2 class="bg-grad">物理化学の基礎と発展</h2>
+                    <h2 class="bg-grad">物理化学の基礎と応用</h2>
                     <dl class="contents-container">
                         <article>
                             <div class="content-box">
